Added an API for get user list.
